AYS-441 | `Orders.generate()` Method Has Been Refactored